--- a/springboot-web/src/main/resources/application.yml
+++ b/springboot-web/src/main/resources/application.yml
@@ -1,12 +1,10 @@
 # DataSource Config
 spring:
   datasource:
-    driver-class-name: org.h2.Driver
-    schema: classpath:db/schema-h2.sql
-    data: classpath:db/data-h2.sql
-    url: jdbc:h2:mem:test
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/example?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
     username: root
-    password: test
+    password: 123456
 
 # Logger Config
 logging:
